--- a/Assignment/Gaming_Lobby/Game_Server/App.config
+++ b/Assignment/Gaming_Lobby/Game_Server/App.config
@@ -1,20 +1,14 @@
-﻿<system.serviceModel>
-	<services>
-		<service name="MortalKombatLobbyService.LobbyService">
-			<endpoint address="" binding="basicHttpBinding" contract="MortalKombatLobbyService.ILobbyService" />
-			<host>
-				<baseAddresses>
-					<add baseAddress="http://localhost:8080/LobbyService" />
-				</baseAddresses>
-			</host>
-		</service>
-	</services>
-	<behaviors>
-		<serviceBehaviors>
-			<behavior>
-				<serviceMetadata httpGetEnabled="True" />
-				<serviceDebug includeExceptionDetailInFaults="False" />
-			</behavior>
-		</serviceBehaviors>
-	</behaviors>
-</system.serviceModel>
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<configuration>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+	</startup>
+</configuration>
+
+
+
+
+
+
+
+
